[tool.poetry]
name = "world-walker"
version = "0.1.0"
description = ""
authors = ["Alexander-Zaychenko <alexzay2012@yandex.ru>"]
readme = "README.md"
packages = [{include = "world_walker"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.0.0"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = 'world_walker.scripts.main:main'